# superpixel-classification

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.rst  put_cli.py  pyproject.toml  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
cli/SuperpixelClassification/: SuperpixelClassification.py  SuperpixelClassification.xml
superpixel_classification/: docker-entrypoint.sh  slicer_cli_list.json
superpixel_classification/SuperpixelClassification/: SuperpixelClassification.py  SuperpixelClassification.xml  SuperpixelClassificationBase.py  SuperpixelClassificationTensorflow.py  SuperpixelClassificationTorch.py  progress_helper.py
superpixel_classification/SuperpixelClassification/benchmarks/: benchmark_torch.py
superpixel_classification/SuperpixelClassification/tests/: generate_MNIST_image.py  test_feature_extract.py  test_full_training_cycle.py  test_gen_superpixels.py  test_predict.py  test_tensorflow.py  test_torch.py  validate_json_annotation.py
tools/: inspect_image_feature_file.py
