[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "SuperpixelClassification"
dynamic = ["version"]
readme = "README.rst"
classifiers = ["License :: OSI Approved :: Apache Software License"]
requires-python = ">=3.8"
dependencies = [
    "girder-client",
    "girder-slicer-cli-web",
    "h5py",
    "histomicstk",
    "al_bench@git+https://github.com/DigitalSlideArchive/ALBench.git",
]

[project.optional-dependencies]
tensorflow = [
    "tensorflow>=2.6,<3.0",
    "keras",
]
torch = [
    "torch>=1.11,<2.0",
    "batchbald_redux",
    "torchvision@git+https://github.com/pytorch/vision.git@v0.14.1",
]
