[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "SuperpixelClassification"
dynamic = ["version"]
readme = "README.rst"
classifiers = ["License :: OSI Approved :: Apache Software License"]
requires-python = ">=3.11"
dependencies = [
    "girder-client",
    "girder-slicer-cli-web",
    "h5py",
    "histomicstk",
    "tenacity",
    "al_bench@git+https://github.com/DigitalSlideArchive/ALBench.git",
]

[project.optional-dependencies]
tensorflow = [
    "tensorflow>=2.6,<3.0",
    "keras",
]
torch = [
    "torch",
    "torchvision",
    "batchbald_redux",
    "huggingface_hub",
    "timm",
]
